--- a/MasterPages/Frontend.master
+++ b/MasterPages/Frontend.master
@@ -1,5 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="Frontend.master.cs" Inherits="MasterPages_Frontend" %>
 
+
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -14,8 +15,23 @@
     <form id="form1" runat="server">
         <div id="PageWrapper">
             <header><a href="/"></a></header>
-            <nav>Menu goes here</nav>
+            <nav>
+                <asp:Menu ID="Menu1" runat="server" CssClass="MainMenu" DataSourceID="SiteMapDataSource1" Orientation="Horizontal" StaticEnableDefaultPopOutImage="False">
+                    
+                    <DynamicItemTemplate>
+                    <%# Eval("Text") %>
+                    </DynamicItemTemplate>
+                </asp:Menu>
+                <asp:TreeView ID="TreeView1" runat="server" DataSourceID="SiteMapDataSource1" ShowExpandCollapse="False">
+                    <LevelStyles>
+                    <asp:TreeNodeStyle CssClass="FirstLevelMenuItems" />
+                    </LevelStyles>
+
+                </asp:TreeView>
+                <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" ShowStartingNode="False" />
+            </nav>
             <section id="MainContent">
+                <asp:SiteMapPath ID="SiteMapPath1" runat="server"></asp:SiteMapPath><br /><br />
                 <asp:ContentPlaceHolder id="cpMainContent" runat="server">
         
                 </asp:ContentPlaceHolder>
@@ -25,7 +41,12 @@
                 <asp:DropDownList ID="ddlThemeList" runat="server" AutoPostBack="True" OnSelectedIndexChanged="ddlThemeList_SelectedIndexChanged">
           <asp:ListItem>Monochrome</asp:ListItem>
           <asp:ListItem>DarkGrey</asp:ListItem>
-                </asp:DropDownList></aside>
+                </asp:DropDownList>
+                <br />
+                <br />
+                <Wrox:Banner ID="Banner1" runat="server" DisplayDirection="Vertical" />
+                <br />
+            </aside>
             <footer>Footer goes here</footer>
         </div>
     </form>
