--- a/App_Themes/DarkGrey/DarkGrey.css
+++ b/App_Themes/DarkGrey/DarkGrey.css
@@ -137,3 +137,20 @@ footer
     color:red;
 
 }
+.PleaseWait
+    {
+    height: 32px;
+    width: 500px;
+    background-image: url(Images/PleaseWait.gif);
+    background-repeat: no-repeat;
+    padding-left: 40px;
+    line-height: 32px;
+    }
+.Attention{
+    border: 4px solid red;
+    padding: 10px 0;
+    width: 100px;
+    margin: auto;
+    display: block;
+    text-align: center;
+    }
