--- a/MasterPages/Frontend.master
+++ b/MasterPages/Frontend.master
@@ -13,6 +13,13 @@
 </head>
 <body >
     <form id="form1" runat="server">
+        <asp:ScriptManager ID="ScriptManager1" runat="server">
+            <Scripts>
+            <asp:ScriptReference Name="jquery" />
+            <asp:ScriptReference Path="~/Scripts/WebForms/WebUIValidation.js" />
+             </Scripts>
+        </asp:ScriptManager>
+            
         <div id="PageWrapper">
             <header><a href="/"></a></header>
             <nav>
@@ -49,6 +56,9 @@
             </aside>
             <footer>Footer goes here</footer>
         </div>
+        <asp:ContentPlaceHolder ID="cpClientScript" runat="server">
+
+        </asp:ContentPlaceHolder>
     </form>
 </body>
 </html>
