--- a/App_Themes/DarkGrey/DarkGrey.css
+++ b/App_Themes/DarkGrey/DarkGrey.css
@@ -154,3 +154,20 @@ footer
     display: block;
     text-align: center;
     }
+.ItemContainer
+{
+width: 400px;
+list-style-type: none;
+clear: both;
+}
+.ItemContainer li
+{
+height: 300px;
+width: 200px;
+float: left;
+}
+.ItemContainer li img
+{
+width: 180px;
+margin: 10px 20px 10px 0;
+}
