--- a/MasterPages/Management.master
+++ b/MasterPages/Management.master
@@ -7,6 +7,7 @@
     <title></title>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
+    <script src="../Scripts/jquery-2.2.2.min.js"></script>
 </head>
 <body>
     <form id="form1" runat="server">
